--- a/FLUTTER/lista_clientes/android/build.gradle
+++ b/FLUTTER/lista_clientes/android/build.gradle
@@ -1,3 +1,17 @@
+// android/build.gradle
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        // Esta línea es necesaria para usar el plugin de Android con Gradle 8.x
+        classpath 'com.android.tools.build:gradle:8.1.4'
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -6,9 +20,11 @@ allprojects {
 }
 
 rootProject.buildDir = "../build"
+
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
+
 subprojects {
     project.evaluationDependsOn(":app")
 }
