--- a/FLUTTER/lista_clientes/pubspec.yaml
+++ b/FLUTTER/lista_clientes/pubspec.yaml
@@ -9,11 +9,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite: ^2.0.0+4
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  test: ^1.16.0
 
 flutter:
   uses-material-design: true
